--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://eridanuscheese.github.io"
+url: "https://bo88888.github.io"
 
 github:
-  username: EridanusCheese # change to your github username
+  username: bo88888 # change to your github username
 
 # twitter:
 #  username: eridanus_23 # change to your twitter username
@@ -39,7 +39,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://instagram.com/eridanus_23/ # change to your twitter homepage
-    #- https://github.com/eridanuscheese # change to your github homepage
+    #- https://github.com/bo88888 # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
