--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: 蜀 # the main title
 
-tagline: my inner world # it will display as the sub-title
+tagline: 你看去年缓缓流淌的轻烟，又怎知不是今年滂沱的大雨 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   We are all made of stardust.
